Bug 310149 - KAuth async action with helper simply fails.
Summary: KAuth async action with helper simply fails.
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdecore (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-15 14:51 UTC by Yichao Yu
Modified: 2013-02-28 20:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yichao Yu 2012-11-15 14:51:19 UTC
Async action with helper in KAuth always fails.
See http://lists.kde.org/?l=kde-devel&m=135274807824550&w=2


Reproducible: Always
Comment 1 Yichao Yu 2013-02-25 04:20:28 UTC
Review created.

https://git.reviewboard.kde.org/r/109133/
Comment 2 Weng Xuetian 2013-02-28 20:10:41 UTC
Git commit 23268cac52bfc09d9ee8f9bc1787216ab383ad6c by Weng Xuetian, on behalf of Yichao Yu.
Committed on 28/02/2013 at 21:07.
Pushed by xuetianweng into branch 'KDE/4.10'.

Allow async KAuth Action with helper (and disallow async without helper)
REVIEW: 109133

M  +1    -1    kdecore/auth/kauthaction.cpp

http://commits.kde.org/kdelibs/23268cac52bfc09d9ee8f9bc1787216ab383ad6c