Allow async KAuth Action with helper (and disallow async without helper)

BUG: 310149
REVIEW: 109133